--- a/MonitorSystem/MonitorSystem.csproj
+++ b/MonitorSystem/MonitorSystem.csproj
@@ -39,7 +39,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <BaseIntermediateOutputPath>..\..\..\..\Binaries\MonitorSystem\obj\Debug\x86</BaseIntermediateOutputPath>
+    <OutputPath>..\..\..\..\Binaries\MonitorSystem\bin\Debug\x86</OutputPath>
     <DefineConstants>TRACE;DEBUG;WINFORMS,NOTUSEINTERCEPTOR</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -50,7 +51,8 @@
     <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <BaseIntermediateOutputPath>..\..\..\..\Binaries\MonitorSystem\obj\Release\x86</BaseIntermediateOutputPath>
+    <OutputPath>..\..\..\..\Binaries\MonitorSystem\bin\Release\x86</OutputPath>
     <DefineConstants>WINFORMS,NOTUSEINTERCEPTOR</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -75,7 +77,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Debug\</OutputPath>
+    <BaseIntermediateOutputPath>..\..\..\..\Binaries\MonitorSystem\obj\Debug\AnyCPU</BaseIntermediateOutputPath>
+    <OutputPath>..\..\..\..\Binaries\MonitorSystem\bin\Debug\AnyCPU</OutputPath>
     <DefineConstants>TRACE;DEBUG;WINFORMS,NOTUSEINTERCEPTOR</DefineConstants>
     <NoWarn>
     </NoWarn>
@@ -87,7 +90,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <OutputPath>bin\Release\</OutputPath>
+    <BaseIntermediateOutputPath>..\..\..\..\Binaries\MonitorSystem\obj\Release\AnyCPU</BaseIntermediateOutputPath>
+    <OutputPath>..\..\..\..\Binaries\MonitorSystem\bin\Release\AnyCPU</OutputPath>
     <DefineConstants>WINFORMS,NOTUSEINTERCEPTOR</DefineConstants>
     <Optimize>true</Optimize>
     <NoWarn>
@@ -101,7 +105,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
+    <BaseIntermediateOutputPath>..\..\..\..\Binaries\MonitorSystem\obj\Debug\x64</BaseIntermediateOutputPath>
+    <OutputPath>..\..\..\..\Binaries\MonitorSystem\bin\Debug\x64</OutputPath>
     <DefineConstants>TRACE;DEBUG;WINFORMS,NOTUSEINTERCEPTOR</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -111,7 +116,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
+    <BaseIntermediateOutputPath>..\..\..\..\Binaries\MonitorSystem\obj\Release\x64</BaseIntermediateOutputPath>
+    <OutputPath>..\..\..\..\Binaries\MonitorSystem\bin\Release\x64</OutputPath>
     <DefineConstants>WINFORMS,NOTUSEINTERCEPTOR</DefineConstants>
     <Optimize>true</Optimize>
     <NoWarn>;2008</NoWarn>
@@ -138,8 +144,9 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="ScintillaNet">
-      <HintPath>..\..\..\..\..\..\..\Francois\Other\DLLs\ScintillaNET\ScintillaNet.dll</HintPath>
+    <Reference Include="ScintillaNET, Version=2.6.0.0, Culture=neutral, PublicKeyToken=948d6c9751444115, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Users\francois\Dropbox\Dev\DLLs\ScintillaNET\ScintillaNET.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
